new resume and project added

--- a/index.html
+++ b/index.html
@@ -99,21 +99,18 @@
                 </div>
                 <div class="wow fadeInRight col-lg-5 mb-4 mb-lg-0 text-center">
                     <h3 class="">let’s Introduce about myself</h3>
-                    <p class="fs-6" style="text-align: justify;">I'm Vibhor Patil, a Full Stack Developer in Nagpur,
-                        India with 1 year of experience in web development. I'm passionate about technology and I'm
-                        always looking for new ways to learn and grow. I started my journey as a Full Stack Developer by
-                        learning HTML, CSS, and JavaScript. Once I had a good understanding of these basics, I moved on
-                        to learn more advanced technologies like Bootstrap, JQuery, PHP, and MySQL. I've worked on a
-                        variety of projects over the past year, including web applications, landing pages, and even some
-                        e-commerce websites. Each project has taught me something new and helped me to improve my
-                        skills.<br>
-                        One of the things I love most about being a Full Stack Developer is the creativity involved. I
-                        enjoy coming up with new ideas and seeing them come to life. I'm also proud of the fact that
-                        I've been able to use my skills to help businesses grow. I've helped businesses create websites
-                        that have helped them to increase their online presence and attract new customers. In the
-                        future, I want to continue to learn and grow as a Full Stack Developer. I want to become an
-                        expert in all aspects of web development, and I want to create innovative solutions that make a
-                        difference in the world.
+                    <p class="fs-6" style="text-align: justify;">I'm Vibhor Patil, a passionate Full Stack Developer
+                        based in Maharashtra, India, specializing in Laravel development. With over 1 year of
+                        experience, my
+                        journey began with mastering the fundamentals of HTML, CSS, and JavaScript. Progressing further,
+                        I delved into advanced technologies like Bootstrap, JQuery, PHP, and MySQL. My portfolio
+                        showcases a diverse range of projects, including web applications, landing pages, and e-commerce
+                        websites, each contributing to my continuous skill enhancement.<br>
+                        As a dedicated Laravel developer, I take pride in the creative aspect of my work, constantly
+                        generating and bringing innovative ideas to life. One of the highlights of my career has been
+                        leveraging my skills to assist businesses in expanding their online presence and attracting new
+                        customers. Moving forward, my aspiration is to deepen my expertise in all facets of web
+                        development, crafting innovative solutions that make a meaningful impact in the world.
                     </p>
                 </div>
             </div>
@@ -251,12 +248,13 @@
                                 <div class="card rounded-0 border-0 text-center py-5 px-3"
                                     style="min-height: 100%!important;">
                                     <div>
-                                        <img src="/image/services-img/react.png">
+                                        <img src="/image/services-img/laravel.png">
                                     </div>
-                                    <h5 class="text-uppercase mt-4 mb-3"><a target="_blank"
-                                            href="https://www.w3schools.com/react/default.asp"
-                                            class="text-dark">React</a></h5>
-                                    <p>React is a JavaScript library for building user interfaces.</p>
+                                    <h5 class="my-3 text-uppercase mt-4 mb-3"><a target="_blank"
+                                            href="https://laravel.com/" class="text-dark">Laravel</a>
+                                    </h5>
+                                    <p>Laravel is a web application framework with expressive, elegant
+                                        syntax.</p>
                                 </div>
                             </div>
                         </div>
@@ -267,27 +265,14 @@
                                 <div class="card rounded-0 border-0 text-center py-5 px-3"
                                     style="min-height: 100%!important;">
                                     <div>
-                                        <img src="/image/services-img/laravel.png">
+                                        <img src="/image/services-img/postman.png">
                                     </div>
-                                    <h5 class="my-3 text-uppercase"><a target="_blank" href="https://laravel.com/"
-                                            class="text-dark">Laravel</a>
+                                    <h5 class="my-3 text-uppercase mt-4 mb-3"><a target="_blank"
+                                            href="https://www.postman.com/" class="text-dark">Postman</a>
                                     </h5>
-                                    <p class="mb-0">Laravel is a web application framework with expressive, elegant
-                                        syntax.</p>
+                                    <p>Postman is an API platform for building and using APIs.</p>
                                 </div>
                             </div>
-                            <!-- <div class="col-lg-3 col-sm-6 mb-4">
-                                <div class="card rounded-0 border-0 text-center py-5 px-3"
-                                    style="min-height: 100%!important;">
-                                    <div>
-                                        <img src="/image/services-img/mysql.png">
-                                    </div>
-                                    <h5 class="text-uppercase mt-4 mb-3"><a target="_blank"
-                                            href="https://www.w3schools.com/sql/default.asp" class="text-dark">mysql</a>
-                                    </h5>
-                                    <p>SQL is a standard language for storing data in databases.</p>
-                                </div>
-                            </div> -->
                             <!-- <div class="col-lg-3 col-sm-6 mb-4">
                                 <div class="card rounded-0 border-0 text-center py-5 px-3"
                                     style="min-height: 100%!important;">
@@ -322,6 +307,19 @@
                     <div class="tab-pane fade show active" id="pills-one" role="tabpanel"
                         aria-labelledby="pills-one-tab">
                         <div class="row">
+                            <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
+                                <div class="portfolio-img">
+                                    <a href="https://vindhyeshvariurbannidhi.com/" target="_blank">
+                                        <img src="/image/portfolio/nidhi_front.png" class="img-fluid w-100">
+                                        <div class="overlay"> <i class="fas fa-plus"></i></div>
+                                    </a>
+                                </div>
+                                <h5 class="mb-0 mt-4">Vindhyeshvari Urban Nidhi Limited</h5>
+                                <p style="text-align: justify;">Led the end-to-end development of the Vindhyeshvari
+                                    Urban Nidhi website using Laravel and Bootstrap, incorporating a binary matrix tree
+                                    structure in the admin panel for efficient MLM functionality.
+                                </p>
+                            </div>
                             <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
                                 <div class="portfolio-img">
                                     <a href="https://asconsult.in/" target="_blank">
@@ -497,7 +495,7 @@
                                         class="fs-3 fas fa-envelope"></i></a></li>
                             <li><a href="https://www.instagram.com/iamvibhorpatil/" target="_blank"><i
                                         class="fs-3 fab fa-instagram"></i></a></li>
-                            <li><a href="https://github.com/iamvibh0r" target="_blank"><i
+                            <li><a href="https://github.com/iamvibhorpatil" target="_blank"><i
                                         class="fs-3 fab fa-github"></i></i></a></li>
                         </ul>
                     </div>
